Fix Android build, and reenable the VR controller.
Fixes the Android build on gerrit.
Enables VR support in order to get the head tracking for the
controller, but removes the option to launch into Cardboard, as
that mode does not work with our shaders.

Tested on Linux and Android.

Change-Id: I6e55baf5112d572b7bc8a1d4af8f9df3e2cb4b3e

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ assets/anims/
 assets/flatbufferschemas/
 assets/fonts/
 assets/graphs/
+assets/hyphen-data/
 assets/materials/
 assets/meshes/
 assets/rails/
@@ -21,6 +22,7 @@ assets/sounds/*.pinsound
 assets/textures/
 assets/overlays/
 bin/
+built_assets/
 fplbase_assets/
 gen/
 libs/
