--- a/src/rawassets/lvl_easy_list.json
+++ b/src/rawassets/lvl_easy_list.json
@@ -3,10 +3,30 @@
     {
       "component_list": [
         {
+          "data_type": "corgi_GraphDef",
+          "data": {
+          }
+        },
+        {
           "data_type": "RailDenizenDef",
           "data": {
             "rail_name": "player_path",
-            "lap_end": 0.9
+            "rail_offset": {
+              "x": 0,
+              "y": 0,
+              "z": 0
+            },
+            "rail_orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 0
+            },
+            "rail_scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "lap_end": 0.65
           }
         },
         {
@@ -19,6 +39,21 @@
         {
           "data_type": "corgi_TransformDef",
           "data": {
+            "position": {
+              "x": -80.004166,
+              "y": 49.99786,
+              "z": 2
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 90
+            },
             "child_ids": [
               "ActivePlayer",
               "Raft_Signless"
