--- a/src/rawassets/lvl_easy_patrons.json
+++ b/src/rawassets/lvl_easy_patrons.json
@@ -5,6 +5,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$96e2-11d8-643b-844c",
             "prototype": "PatronHungryHippo_First",
             "comment": "Special Hippo that starts the rail moving."
           }
@@ -39,6 +40,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$b267-6bae-58dc-42ee",
             "prototype": "PatronMoustacheCroc"
           }
         },
@@ -49,6 +51,16 @@
               "x": -42,
               "y": 42,
               "z": 0.4
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 0
             },
             "child_ids": [
               "PatronMoustacheCroc_RenderMesh"
@@ -62,6 +74,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$9e1b-0e47-483c-c799",
             "prototype": "PatronHungryHippo"
           }
         },
@@ -78,6 +91,11 @@
               "y": 1.4,
               "z": 1.4
             },
+            "orientation": {
+              "x": 0,
+              "y": 0,
+              "z": -137.509872
+            },
             "child_ids": [
               "PatronHungryHippo_RenderMesh"
             ]
@@ -90,6 +108,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$a021-bc02-6eeb-2eab",
             "prototype": "PatronGiraffette"
           }
         },
@@ -100,6 +119,11 @@
               "x": -20,
               "y": 47,
               "z": 0.4
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
             },
             "orientation": {
               "x": 0,
@@ -118,6 +142,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$dc8e-bc61-69d4-28ec",
             "prototype": "PatronLadyMandrill"
           }
         },
@@ -129,10 +154,15 @@
               "y": 80,
               "z": 0.35
             },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
             "orientation": {
               "x": 0,
-              "y": 0,
-              "z": -38.814041
+              "y": -0,
+              "z": 166.487366
             },
             "child_ids": [
               "PatronLadyMandrill_RenderMesh"
@@ -146,6 +176,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$81e5-e086-e721-7dd5",
             "prototype": "PatronBankerBird"
           }
         },
@@ -156,6 +187,11 @@
               "x": -15,
               "y": 64,
               "z": 6
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
             },
             "orientation": {
               "x": 0,
@@ -174,6 +210,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$a647-4b8a-5708-0e59",
             "prototype": "PatronHungryHippo"
           }
         },
@@ -190,6 +227,11 @@
               "y": 1.4,
               "z": 1.4
             },
+            "orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 0
+            },
             "child_ids": [
               "PatronHungryHippo_RenderMesh"
             ]
@@ -202,6 +244,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$14e1-4873-0a58-93e5",
             "prototype": "PatronMoustacheCroc"
           }
         },
@@ -213,28 +256,15 @@
               "y": 93,
               "z": 0.4
             },
-            "child_ids": [
-              "PatronMoustacheCroc_RenderMesh"
-            ]
-          }
-        }
-      ]
-    },
-    {
-      "component_list": [
-        {
-          "data_type": "corgi_MetaDef",
-          "data": {
-            "prototype": "PatronMoustacheCroc"
-          }
-        },
-        {
-          "data_type": "corgi_TransformDef",
-          "data": {
-            "position": {
-              "x": 14,
-              "y": 97,
-              "z": 0.4
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "orientation": {
+              "x": 0,
+              "y": 0,
+              "z": -154.698608
             },
             "child_ids": [
               "PatronMoustacheCroc_RenderMesh"
@@ -248,6 +278,41 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$94ce-06a6-daed-a47c",
+            "prototype": "PatronMoustacheCroc"
+          }
+        },
+        {
+          "data_type": "corgi_TransformDef",
+          "data": {
+            "position": {
+              "x": 14,
+              "y": 97,
+              "z": 0.4
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "orientation": {
+              "x": 0,
+              "y": 0,
+              "z": -137.509872
+            },
+            "child_ids": [
+              "PatronMoustacheCroc_RenderMesh"
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "component_list": [
+        {
+          "data_type": "corgi_MetaDef",
+          "data": {
+            "entity_id": "$97de-1632-28ab-b916",
             "prototype": "PatronLadyMandrill"
           }
         },
@@ -258,6 +323,11 @@
               "x": 20,
               "y": 70,
               "z": 0.35
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
             },
             "orientation": {
               "x": 0,
@@ -276,6 +346,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$de6d-5153-c427-9a53",
             "prototype": "PatronBankerBird"
           }
         },
@@ -286,6 +357,11 @@
               "x": 25,
               "y": 83,
               "z": 7
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
             },
             "orientation": {
               "x": 0,
@@ -304,6 +380,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$3324-a56c-e19b-bb29",
             "prototype": "PatronGiraffette"
           }
         },
@@ -315,10 +392,15 @@
               "y": 98,
               "z": 0.4
             },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
             "orientation": {
               "x": 0,
               "y": 0,
-              "z": -40.571941
+              "z": -109.326874
             },
             "child_ids": [
               "PatronGiraffette_RenderMesh"
@@ -332,6 +414,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$a980-ad47-370c-2616",
             "prototype": "PatronHungryHippo"
           }
         },
@@ -348,6 +431,11 @@
               "y": 1.4,
               "z": 1.4
             },
+            "orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 0
+            },
             "child_ids": [
               "PatronHungryHippo_RenderMesh"
             ]
@@ -360,6 +448,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$a3a5-9238-3c50-9894",
             "prototype": "PatronHungryHippo"
           }
         },
@@ -376,6 +465,11 @@
               "y": 1.4,
               "z": 1.4
             },
+            "orientation": {
+              "x": 0,
+              "y": 0,
+              "z": -85.943672
+            },
             "child_ids": [
               "PatronHungryHippo_RenderMesh"
             ]
@@ -388,6 +482,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$235c-2a55-2625-c3b7",
             "prototype": "PatronBankerBird"
           }
         },
@@ -398,6 +493,11 @@
               "x": 65,
               "y": 57,
               "z": 8
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
             },
             "orientation": {
               "x": 0,
@@ -416,6 +516,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$76d2-81bc-e1d8-98cb",
             "prototype": "PatronLadyMandrill"
           }
         },
@@ -427,10 +528,15 @@
               "y": 33,
               "z": 0.35
             },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
             "orientation": {
               "x": 0,
-              "y": 0,
-              "z": -38.814041
+              "y": -0,
+              "z": 29.940899
             },
             "child_ids": [
               "PatronLadyMandrill_RenderMesh"
@@ -444,6 +550,7 @@
         {
           "data_type": "corgi_MetaDef",
           "data": {
+            "entity_id": "$b39e-d041-6764-b2c3",
             "prototype": "PatronMoustacheCroc"
           }
         },
@@ -454,6 +561,16 @@
               "x": 72,
               "y": 35,
               "z": 0.4
+            },
+            "scale": {
+              "x": 1,
+              "y": 1,
+              "z": 1
+            },
+            "orientation": {
+              "x": 0,
+              "y": -0,
+              "z": 0
             },
             "child_ids": [
               "PatronMoustacheCroc_RenderMesh"
